fix: styles and problems with blockSwap when display chenged size, and flex-wrap changed

--- a/style.css
+++ b/style.css
@@ -2,24 +2,28 @@
  * {
      margin: 0 auto;
  }
-
+ 
  body {
     width: 100vw;
     height: 100vw;
+    
  }
 
  .game-buttons {
      display: flex;
      margin-top: 1%;
-     width: 400px;
+     width: 60%;
+     max-width: 400px;
      height: 3%;
+     min-height: 35px;
  }
 
  .game-statistic {
     display: flex;
     margin-top: 5px;
-    width: 400px;
-    height: 2%;
+    width: 60%;
+    max-width: 400px;
+    height: 3%;
  }
 
  .game-statistic__el {
@@ -31,7 +35,7 @@
  }
 
  .button {
-     width: 150px;
+     width: 45%;
      height: 100%;
      background-color: lightgreen;
      border: none;
@@ -51,13 +55,14 @@
  }
 
  .game-shield {
-    padding-left: 0.5%;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     margin-top: 10px;
-    width: 400px;
-    height: 400px;
+    width:100%;
+    height: 100%;
+    max-width: 400px;
+    max-height: 400px;
     background-color: lightblue;
  }
 
@@ -73,8 +78,6 @@
  .last-block {
     display: absolute;
     margin: 2px;
-    width: 23%;
-    height: 23%;
     background-color: inherit;
     border: 1px solid lightblue;
  }
@@ -82,8 +85,10 @@
  .sizes-block {
     display: flex;
     margin-top: 20px;
-    width: 400px;
+    width: 80%;
+    max-width: 400px;
     height: 3%;
+    min-height: 30px;
  }
 
  .sizes-block__element {
@@ -111,8 +116,10 @@
  .results {
     margin-top: 10px;
     display: block;
-    width: 400px;
+    width: 60%;
+    max-width: 400px;
     height: 3%;
+    min-height: 30px;
     background-color: purple;
     color: white;
     border: none;
